Fixed some issues with spacing around [ ... ].

--- a/src/components/record/entryStyle.css
+++ b/src/components/record/entryStyle.css
@@ -51,8 +51,8 @@
   text-decoration: line-through;
 }
 .removeMargin{
-  margin-right: -4px;
-  margin-left: -4px;
+  margin-right: -1px;
+  margin-left: -1px;
  }
 
 /*.forename {
